fixed the additional items flag on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 /****************************
 SCROLL&STRAP TEMPLATE V 1.0.
 http://sitediscount.ru
@@ -727,11 +728,12 @@ FORM.......................................1785
         z-index: 1;
         background-size: 100%;
         position: absolute;
-        width: 20%;
+        width: 80%;
         height: 40px;
         margin-top: 25px;
         text-align: center;
         display: none;
+        max-width: 260px;
 	}
 
 	.label .needed p {
